<resources>
    <string name="app_name">MyCocktailBar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_button_text">SAVE</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="add_title">Add title</string>
    <string name="optional_field">Optional field</string>
    <string name="description">Description</string>
</resources>